charts/all/test-workloads/templates/kata-pod-fs-init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: katablock
  namespace: test
  labels:
    app: katablock
spec:
  runtimeClassName: kata
  containers:
    - name: hello-openshift
      image: quay.io/openshift/origin-hello-openshift
      ports:
        - containerPort: 8888
      securityContext:
        privileged: false
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        runAsUser: 1001
        capabilities:
          drop:
            - ALL
        seccompProfile:
          type: RuntimeDefault
      volumeDevices:
        - name: csi-block
          devicePath: /dev/block-device
  volumes:

  - name: csi-block
    persistentVolumeClaim:
      claimName: block-pvc
