charts/all/test-workloads/templates/kata-pod-fs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kata-mount-in-container
  namespace: test
  labels:
    app: kata-mount-in-container
spec:
  runtimeClassName: kata
  containers:
    - name: hello-openshift
      image: quay.io/openshift/origin-hello-openshift
      ports:
        - containerPort: 8888
      securityContext:
        privileged: true
      volumeDevices:
        - name: csi-block
          devicePath: /dev/block-device
      command: ["/bin/sh", "-c"]
      args:
        - | 
          set -e
          mkdir -p /mnt/secure
          mount /dev/block-device /mnt/secure
          /hello-openshift
      volumeDevices:
      - name: csi-block
        devicePath: /dev/block-device
  containers:
  volumes:

  - name: csi-block
    persistentVolumeClaim:
      claimName: block-pvc-3
