charts/all/test-workloads/templates/kata-storage-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secure-storage
  namespace: test
  labels:
    app: secure-storage
spec:
  runtimeClassName: kata
  containers:
  - name: hello-openshift
    image: quay.io/openshift/origin-hello-openshift
    ports:
      - containerPort: 8888
    lifecycle:
      postStart:
        exec:
          command: ["/bin/sh", "-c", "while [ ! -f /mnt/secure/.ready ]; do sleep 1; done"]
    securityContext:
      privileged: false
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      runAsUser: 1001
      capabilities:
        drop:
          - ALL
      seccompProfile:
        type: RuntimeDefault
    volumeMounts:
    - name: secrets
      mountPath: /secrets
    - name: secure-mount
      mountPath: /mnt/secure

  volumes:
  - name: secrets
    emptyDir: {}
  - name: csi-block-vol
    persistentVolumeClaim:
      claimName: block-pvc-2
  - name: secure-mount        # Shared volume definition
    emptyDir: 
      medium: Memory
