charts/all/test-workloads/templates/udn-pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: udn2
  namespace: kata-test-udn
  labels:
    app: udn2
spec:
  runtimeClassName: kata
  containers:
    - name: hello-openshift
      image: quay.io/openshift/origin-hello-openshift
      ports:
        - containerPort: 8888
      securityContext:
        privileged: false
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        runAsUser: 1001
        capabilities:
          drop:
            - ALL
        seccompProfile:
          type: RuntimeDefault
