charts/all/test-workloads/templates/kata-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kata
  namespace: test
spec:
  ports:
  - name: 8888-tcp
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: kata
  sessionAffinity: None
  type: ClusterIP
