charts/all/test-workloads/templates/kata-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kata
  namespace: test
spec:
  port:
    targetPort: 8888
  to:
    kind: Service
    name: kata
    weight: 100
  wildcardPolicy: None
